--- a/index.html
+++ b/index.html
@@ -348,9 +348,9 @@
                     <div class="service-info">
                       <h3><a href="#">التخطيط الاستراتيجي</a></h3>
                       <p>نقوم بوضع استراتيجيات مخصصة لتبسيط سلسلة التوريد، وتحسين الخدمات اللوجستية، وضمان توصيل الطاقة بشكل مستمر.</p>
-                      <div class="service-action">
+                      <!-- <div class="service-action">
                         <a href="#" class="read-more-btn">التفاصيل <i class="bi bi-arrow-right"></i></a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -366,9 +366,9 @@
                     <div class="service-info">
                       <h3><a href="#">التسويق الرقمي</a></h3>
                       <p>يقدم فريقنا إرشادات حول الممارسات البيئية المسؤولة، لمساعدتك في الالتزام بالمعايير العالمية وتحقيق الكفاءة.</p>
-                      <div class="service-action">
+                      <!-- <div class="service-action">
                         <a href="#" class="read-more-btn">عرض المزيد <i class="bi bi-arrow-right"></i></a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -384,9 +384,9 @@
                     <div class="service-info">
                       <h3><a href="#">تحليل الأداء</a></h3>
                       <p>من خلال تحليل بيانات العمليات بعمق، نقدم رؤى تعزز الإنتاجية، وتقلل الهدر، وتدعم اتخاذ قرارات ذكية.</p>
-                      <div class="service-action">
+                      <!-- <div class="service-action">
                         <a href="#" class="read-more-btn">اقرأ المزيد <i class="bi bi-arrow-right"></i></a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -402,9 +402,9 @@
                     <div class="service-info">
                       <h3><a href="#">أبحاث السوق</a></h3>
                       <p>نجري بحوثًا مفصّلة حول اتجاهات الفحم، والتغيرات التنظيمية، وتوقعات الطلب — لنمنحك المعرفة اللازمة للبقاء في الصدارة.</p>
-                      <div class="service-action">
+                      <!-- <div class="service-action">
                         <a href="service-details.html" class="read-more-btn">اعرف المزيد <i class="bi bi-arrow-right"></i></a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
