--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
       <div class="col-lg-6">
         <div class="hero-image-wrapper" data-aos="fade-up" data-aos-delay="300">
-          <img src="assets/img/about/Navtan-coal-edited_Sundat-Gaurdian-Live.jpg" alt="" class="img-fluid hero-image">
+          <img src="assets/img/main/IMG-20250709-WA0045.jpg" alt="" class="img-fluid hero-image">
           <div class="stat-card top-right">
             <div class="stat-value">18.9K</div>
             <div class="stat-label">تحسين التواجد في السوق</div>
@@ -178,9 +178,9 @@
     <div class="row align-items-center about-showcase">
       <div class="col-lg-6 order-lg-2" data-aos="fade-left" data-aos-delay="300">
         <div class="about-image-grid">
-          <img src="assets/img/about/HartChinaCoalBrief2.webp" class="img-grid-main" alt="رؤيتنا">
-          <img src="assets/img/about/images (1).jpeg" class="img-grid-secondary" alt="فريقنا">
-          <img src="assets/img/about/images (2).jpeg" class="img-grid-tertiary" alt="مقر العمل">
+          <img src="assets/img/main/IMG-20250709-WA0051.jpg" class="img-grid-main" alt="رؤيتنا">
+          <img src="assets/img/main/IMG-20250709-WA0049.jpg" class="img-grid-secondary" alt="فريقنا">
+          <img src="assets/img/main/IMG-20250709-WA0046.jpg" class="img-grid-tertiary" alt="مقر العمل">
           <div class="experience-badge" data-aos="zoom-in" data-aos-delay="500">
             <span class="years">+15</span>
             <span class="text">سنوات من التميز</span>
@@ -330,7 +330,7 @@
 
           <div class="services-image-container" data-aos="fade-up" data-aos-delay="200">
             <div class="services-image">
-              <img src="assets/img/about/image.png" alt="الخدمات" class="img-fluid">
+              <img src="assets/img/main/IMG-20250709-WA0047.jpg" alt="الخدمات" class="img-fluid">
             </div>
           </div>
         </div>
@@ -1221,7 +1221,7 @@
             </div>
             <div class="contact-text">
               <h4>البريد الإلكتروني</h4>
-              <p>info@examplecompany.com</p>
+              <p>info@massive-bright.com</p>
             </div>
           </div>
 
@@ -1231,7 +1231,7 @@
             </div>
             <div class="contact-text">
               <h4>الهاتف</h4>
-              <p>011 10906333</p>
+              <p>01110906333</p>
             </div>
           </div>
 
