--- a/index.html
+++ b/index.html
@@ -1327,11 +1327,8 @@
       <div class="col-lg-4 col-md-3 footer-links">
         <h4>خدماتنا</h4>
         <ul>
-          <li><a href="#">تصميم مواقع</a></li>
-          <li><a href="#">برمجة مواقع</a></li>
-          <li><a href="#">إدارة المنتجات</a></li>
-          <li><a href="#">تسويق رقمي</a></li>
-          <li><a href="#">تصميم جرافيك</a></li>
+          <li>صناعة الفحم</li>
+          <li>نعبئة الفحم</li>
         </ul>
       </div>
     </div>
